[gd_scene load_steps=18 format=3 uid="uid://bunice3vh7vor"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_pxgg3"]
[ext_resource type="PackedScene" uid="uid://gjrrngysyos8" path="res://assets/3d models/small.blend" id="2_m2vom"]
[ext_resource type="Script" path="res://scripts/player_visuals.gd" id="2_tkhpu"]
[ext_resource type="PackedScene" uid="uid://cp24j2wnbsb07" path="res://scenes/medium.tscn" id="3_3rt22"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="3_4kp0t"]
[ext_resource type="PackedScene" uid="uid://dx2hjeaukux26" path="res://scenes/big.tscn" id="3_av8vt"]
[ext_resource type="Shader" path="res://scripts/wind_particles.gdshader" id="5_tqky0"]
[ext_resource type="Script" path="res://scripts/collision_shape_3d.gd" id="6_5glb8"]
[ext_resource type="Script" path="res://scripts/wind_particles.gd" id="6_wm2yc"]
[ext_resource type="Texture2D" uid="uid://crximww6scyst" path="res://assets/circle.png" id="7_i3b1n"]
[ext_resource type="Texture2D" uid="uid://dph1h1kti1vul" path="res://assets/indicator.png" id="7_lbt4e"]
[ext_resource type="Script" path="res://scripts/camera_pivot.gd" id="9_1pr0t"]
[ext_resource type="Script" path="res://scripts/weapon_slots.gd" id="12_cfv4x"]

[sub_resource type="BoxShape3D" id="BoxShape3D_a4xc2"]
size = Vector3(67, 60, 202)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x26nc"]
shader = ExtResource("5_tqky0")
shader_parameter/WIND_DIRECTION = Vector3(1, 0, -1)
shader_parameter/PLAYER_POSITION = Vector3(0, 0, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pqynt"]
cull_mode = 2
disable_receive_shadows = true
use_particle_trails = true

[sub_resource type="RibbonTrailMesh" id="RibbonTrailMesh_x46w3"]
material = SubResource("StandardMaterial3D_pqynt")
shape = 0
size = 2.0

[node name="player" type="CharacterBody3D"]
motion_mode = 1
script = ExtResource("1_pxgg3")

[node name="visuals" type="Node3D" parent="."]
script = ExtResource("2_tkhpu")

[node name="small" parent="visuals" instance=ExtResource("2_m2vom")]
visible = false

[node name="medium" parent="visuals" instance=ExtResource("3_3rt22")]
visible = false

[node name="big" parent="visuals" instance=ExtResource("3_av8vt")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0)
shape = SubResource("BoxShape3D_a4xc2")
script = ExtResource("6_5glb8")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("3_4kp0t")

[node name="Altitude_Throttle_Mass" type="RichTextLabel" parent="HUD"]
anchors_preset = -1
anchor_left = 0.997
anchor_top = 0.003
anchor_right = 0.997
anchor_bottom = 0.003
offset_left = -125.0
offset_top = 0.056
offset_right = 0.456055
offset_bottom = 98.056
text = "Altitude:
Throttle:
Mass:"
fit_content = true

[node name="Debug" type="RichTextLabel" parent="HUD"]
visible = false
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.185
anchor_right = 1.0
anchor_bottom = 0.185
offset_left = -281.0
offset_top = -0.880005
offset_bottom = 97.12
text = "Debug:"
fit_content = true

[node name="Controls_cheatsheet" type="RichTextLabel" parent="HUD"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -348.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
bbcode_enabled = true
text = "[b]Show/Hide controls cheatsheet: T[/b]

Inflate Ballonets (add mass): Ctrl / D
Deflate Ballonets (reduce mass): Space / E

Increase throttle: W
Decrease throttle: S

Aiming (free camera): RMB

Quit: Esc"
fit_content = true

[node name="CenterContainer" type="CenterContainer" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -21.0
offset_top = -20.0
offset_right = 19.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="indicator" type="TextureRect" parent="HUD/CenterContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
texture = ExtResource("7_lbt4e")
expand_mode = 1

[node name="circle_retical" type="TextureRect" parent="HUD/CenterContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("7_i3b1n")
expand_mode = 1

[node name="cross_retical_wip" type="TextureRect" parent="HUD/CenterContainer"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("7_i3b1n")
expand_mode = 1

[node name="x_retical_wip" type="TextureRect" parent="HUD/CenterContainer"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("7_i3b1n")
expand_mode = 1

[node name="v_retical_wip" type="TextureRect" parent="HUD/CenterContainer"]
visible = false
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("7_i3b1n")
expand_mode = 1

[node name="YPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 50, -50)
script = ExtResource("9_1pr0t")

[node name="XPivot" type="Node3D" parent="YPivot"]

[node name="SpringArm3D" type="SpringArm3D" parent="YPivot/XPivot"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
spring_length = 200.0
margin = 0.5

[node name="Camera3D" type="Camera3D" parent="YPivot/XPivot/SpringArm3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 100)
far = 20000.0

[node name="wind_particles" type="GPUParticles3D" parent="."]
auto_translate_mode = 2
layers = 2
cast_shadow = 0
lifetime = 3.0
trail_enabled = true
trail_lifetime = 2.0
process_material = SubResource("ShaderMaterial_x26nc")
draw_pass_1 = SubResource("RibbonTrailMesh_x46w3")
script = ExtResource("6_wm2yc")

[node name="weapon_slots" type="Node3D" parent="."]
script = ExtResource("12_cfv4x")

[node name="weapon_slot_1" type="Node3D" parent="weapon_slots"]

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="weapon_slots/weapon_slot_1"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
radius = 1.0
height = 10.0

[node name="weapon_slot_2" type="Node3D" parent="weapon_slots"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 2, -29, 14)

[node name="weapon_slot_3" type="Node3D" parent="weapon_slots"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, -30, 2)

[node name="weapon_slot_4" type="Node3D" parent="weapon_slots"]

[node name="weapon_slot_5" type="Node3D" parent="weapon_slots"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, -29, -20)

[node name="weapon_slot_6" type="Node3D" parent="weapon_slots"]

[node name="weapon_slot_7" type="Node3D" parent="weapon_slots"]

[node name="weapon_slot_8" type="Node3D" parent="weapon_slots"]

[connection signal="airship_type_switched" from="." to="visuals" method="_on_player_airship_type_switched"]
[connection signal="airship_type_switched" from="." to="CollisionShape3D" method="_on_player_airship_type_switched"]
[connection signal="airship_type_switched" from="." to="YPivot" method="_on_player_airship_type_switched"]
[connection signal="airship_type_switched" from="." to="weapon_slots" method="_on_player_airship_type_switched"]
